# network-proxy

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml
.claude/: settings.json
.devcontainer/: .env.example  docker-compose.yaml
.github/workflows/: docker-publish.yml
deploy/client/: .env.example  bootstrap.sh  docker-compose.yml  run-client-v2ray.sh
deploy/k8s/: README.md
deploy/k8s/base/: configmap.yaml  ingress.yaml  kustomization.yaml  manager-api.yaml  namespace.yaml  secret.yaml  subconverter-pref-configmap.yaml  subconverter.yaml
deploy/manager/: .env.example  bootstrap.sh  docker-compose.yml  run-manager-v2ray.sh  subconverter-pref.toml
deploy/node/: .env.example  bootstrap.sh  docker-compose.yml  run-node-v2ray.sh
docs/: TODO.md
docs/AI-external-context/: README.md  local.md
docs/blogs/: README.md
docs/development/: README.md  TODO.md
docs/development/26-06-12/: plan.md  user.md
docs/development/26-06-15/: user.md
docs/development/template/: user.md
docs/requirements/: README.md
docs/rules/: README.md  mermaid.md  project.md
docs/user-guide/: README.md  manager-quickstart.md  node-agent-quickstart.md  operations.md  subscriptions.md
scripts/: onboard.sh
src/: client_agent.py  node_agent.py  subscribe.py
src/network_proxy/: __init__.py  agent.py  app.py  client_agent.py  settings.py
src/network_proxy/api/: admin.py  dashboard.py  deps.py  node.py  subscribe.py
src/network_proxy/db/: migrations.py  models.py  session.py
src/network_proxy/services/: config_render.py  (+6 more)
tests/: test.sh
(+8 files in other folders)
