[tool.poetry]
name = "network-proxy"
version = "0.1.0"
description = ""
authors = ["benny"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.29.0"
aiohttp = "^3.9.3"
schedule = "^1.2.1"
fastapi = "^0.110.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
