[project]
name = "network-proxy"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9,<4.0"
authors = [{ name = "benny" }]
dependencies = [
	"uvicorn>=0.29.0,<0.30.0",
	"fastapi>=0.110.0,<0.111.0",
	"click>=8.1.7,<9.0.0",
	"httpx>=0.27.0,<0.28.0",
	"pydantic-settings>=2.3.4,<3.0.0",
	"sqlalchemy>=2.0.31,<3.0.0",
	"jinja2>=3.1.4,<4.0.0",
	"apscheduler>=3.10.4,<4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/network_proxy"]
include = ["src/network_proxy/templates/*.j2", "src/network_proxy/templates/*.html"]

[tool.hatch.build.targets.sdist]
include = [
	"src/network_proxy",
	"src/network_proxy/templates/*.j2",
	"src/network_proxy/templates/*.html",
	"main.py",
	"README.md",
]


[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"
